--- a/main.css
+++ b/main.css
@@ -1,3 +1,7 @@
+html {
+  scroll-behavior: smooth;
+}
+
 body { 
   
 background: linear-gradient(124deg, #ff2400, #e81d1d, #e8b71d, #e3e81d, #1de840, #1ddde8, #2b1de8, #dd00f3, #dd00f3);
@@ -83,46 +87,9 @@ background-size: 1800% 1800%;
     position: relative;    
 }
 
-.projects-box{
-  width: 1400px;
-  height: 200px;
-  margin: auto;
-  margin-top: 10rem;
-  position: relative;    
-}
-
-.projects-header{
-  font-family: 'Comic Sans MS', cursive;
-  position: relative;
-  margin: auto;
-  text-align: center;
-}
-
-.projects-row {
-  display: flex;
-  width: 1000vh;
-  margin-left: 31px;
-  flex-direction: row;
-  gap: 1px;
-}
 a{
   text-decoration: none;
   color: black;
-}
-.projects-img{
-  opacity: 1;
-  padding: 15px;
-  position: relative;
-}
-
-.projects-text{
-  font-family: 'Comic Sans MS', cursive;
-  position: relative;
-}
-
-.projects-p{
-  width: 100px;
-  font-size: smaller;
 }
 
 .box-text {
